C/Socket/code/.metadata/.plugins/org.eclipse.cdt.ui/GProject.build.log
07:45:25 **** Incremental Build of configuration Release for project GProject ****
Info: Internal Builder is used for build
gcc "-IC:\\Users\\Admin\\Downloads\\Programs\\SOGETEK\\C\\Socket\\code\\GProject\\src\\manager" -O3 -Wall -c -fmessage-length=0 -o "src\\manager\\GSocketUnix.o" "..\\src\\manager\\GSocketUnix.c" 
..\src\manager\GSocketUnix.c: In function 'GSocketUnix_New':
..\src\manager\GSocketUnix.c:28:11: error: 'GSocketO' {aka 'struct _GSocketO'} has no member named 'Bind2'; did you mean 'Bind'?
  lParent->Bind2 = GSocketUnix_Bind2;
           ^~~~~
           Bind

07:45:26 Build Failed. 1 errors, 0 warnings. (took 1s.207ms)

